examples/test/testpolicy18522.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18522
  namespace: namespace77
spec:
  podSelector:
    matchLabels:
      key43: value42
      key6: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value47
          key49: value7
          key23: value19
      podSelector:
        matchLabels:
          key32: value44
          key3: value25
          key29: value17
